Fix appointment notification overflow when page zoomed in

--- a/css/appointments.css
+++ b/css/appointments.css
@@ -1,69 +1,57 @@
 /*-- -------------------------- -->
-<---        Navigation          -->
-<--- -------------------------- -*/
-
-/* Desktop */
-@media only screen and (min-width: 1025px) {
-  #navigation {
-    height: 5.5em !important;
-  }
-  #navigation .logo {
-    height: 4.5em !important;
-  }
-}
-
-
-/*-- -------------------------- -->
 <---     Notification Modal     -->
 <--- -------------------------- -*/
 
 /* Mobile */
-.modal {
-  z-index: 9999;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: calc(100% - 81px);
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  visibility: hidden;
-  transform: scale(1.1);
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-}
-
-.modal-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 1rem 1rem 2.5rem 1.5rem;
-  width: 80%;
-  max-width: 32rem;
-  border-radius: 0.5rem;
-  font-size: min(5vw, 1.2rem);
-}
-
-.close-button {
-  float: right;
-  width: 1.5rem;
-  line-height: 1.5rem;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 0.25rem;
-  background-color: lightgray;
-}
-
-.close-button:hover {
-  background-color: darkgray;
-}
-
-.show-modal {
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1.0);
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+@media only screen and (min-width: 0em) {
+  .modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999999;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+  }
+  
+  .modal-content {
+    background-color: white;
+    padding: 1rem 1rem 2.5rem 1.5rem;
+    width: 80%;
+    max-height: 80%;
+    max-width: 32rem;
+    border-radius: 0.5rem;
+    font-size: min(5vw, 1.2rem);
+    overflow-y: scroll;
+  }
+  
+  .close-button {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+  }
+  
+  .close-button:hover {
+    background-color: darkgray;
+  }
+  
+  .show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+  }
 }
 
 
